--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ body
 {
     background-color: #e895fc;
 }
-img
-{
-   justify-content: center; 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 .container
 {
@@ -12,6 +14,9 @@ img
     border: 5px solid black;
     display: flex;
     justify-content: center;
+}
+h1{
+    text-align: center;
 }
 .a 
 {
